welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	val taille:Int = getMondeHauteur()
	val colIni:Color = getCouleurSol()
	var c:Color = getCouleurSol()
	var tabCol = new Array[Color](taille)
def remplirTabCol(taille:Int):Array[Color]={	
			do {
				for (i <- 0 to taille - 1){
					c = getCouleurSol()
					avance()
					tabCol(i) = c
					
				}
						
				}while(colIni == c)
					gauche()
					avance()
					droite()
				return tabCol
		}	
	remplirTabCol(taille)
		avance()
		while(colIni == c){			
			for(j <- 0 to taille -1){
				setCouleurBrosse(tabCol(j)
				baisseBrosse()
			}
		}
}
		
		
		
		
